fix(api): allow themes to eager load images
