# storage/api-docs/api-docs.json
@@ -1350,7 +1350,7 @@
                     {
                         "name": "include",
                         "in": "query",
-                        "description": "Comma-separated list of included related resources. Allowed list is anime, entries, entries.videos, song & song.artists.",
+                        "description": "Comma-separated list of included related resources. Allowed list is anime, anime.images, entries, entries.videos, song & song.artists.",
                         "required": false,
                         "schema": {
                             "type": "string"
@@ -1463,7 +1463,7 @@
                     {
                         "name": "include",
                         "in": "query",
-                        "description": "Comma-separated list of included related resources. Allowed list is anime, entries, entries.videos, song & song.artists.",
+                        "description": "Comma-separated list of included related resources. Allowed list is anime, anime.images, entries, entries.videos, song & song.artists.",
                         "required": false,
                         "schema": {
                             "type": "string"
@@ -3687,6 +3687,43 @@
                                 "description": "The Resource Last Updated Timestamp",
                                 "type": "string",
                                 "example": "2020-08-15T05:37:25.000000Z"
+                            },
+                            "images": {
+                                "type": "array",
+                                "items": {
+                                    "properties": {
+                                        "id": {
+                                            "description": "Primary Key",
+                                            "type": "integer",
+                                            "example": 1018
+                                        },
+                                        "path": {
+                                            "description": "The path of the Image in storage",
+                                            "type": "string",
+                                            "example": "anime/bakemonogatari.png"
+                                        },
+                                        "facet": {
+                                            "description": "THe component of the page the image is intended for",
+                                            "type": "string",
+                                            "enum": [
+                                                "Small Cover",
+                                                "Large Cover"
+                                            ],
+                                            "example": "Small Cover"
+                                        },
+                                        "created_at": {
+                                            "description": "The Resource Creation Timestamp",
+                                            "type": "string",
+                                            "example": "2020-08-15T05:30:43.000000Z"
+                                        },
+                                        "updated_at": {
+                                            "description": "The Resource Last Updated Timestamp",
+                                            "type": "string",
+                                            "example": "2020-08-15T05:37:25.000000Z"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
                             }
                         },
                         "type": "object"
